deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-dep
  labels:
    app: project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      name: project-pod
      labels:
        app: project
    spec:
      volumes:
      - name: html
        gitRepo:
          repository: https://github.com/yffyhk/project_gcp_k8s.git
          revision: master
          directory: .
      containers:
      - image: node:14
        name: nodejs
        workingDir: /usr/src/app
        livenessProbe:
          initialDelaySeconds: 120
          httpGet:
            path: /
            port: 8080
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: html
          mountPath: /usr/src/app/html
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: project-nodeport
  labels:
    app: project
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: project  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
  labels:
    app: project
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-nodeport
            port: 
              number: 80
